--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div>
-  <h1 class="text-center text-6xl mt-5  bg-red-500">Lorem Ipsum</h1>
+<div class="text-green-600">
+  <h1 class="text-center text-6xl mt-5">Lorem Ipsum</h1>
+
 </div>
