🤡 Updated app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="text-green-600">
   <h1 class="text-center text-6xl mt-5">Lorem Ipsum</h1>
-
+  <h3 class="text-xl text-center m-3 text-green-400">Dolor sit amet</h3>
 </div>
